force-app/main/default/objects/ssot__LocationProductInventoryChange__dlm/fields/ssot__OnHandQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__OnHandQuantity__c</fullName>
    <label>On Hand Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OnHandQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>