force-app/main/default/objects/ssot__LocationProductInventoryChange__dlm/fields/ssot__rel_1708941906890_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1708941906890_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LocationProductInventoryChange_Locat_rel</label>
    <referenceTo>ssot__Location__dlm</referenceTo>
    <relationshipLabel>LocationProductInventoryChange_Locat_rel</relationshipLabel>
    <relationshipName>rel_1708941906890_end</relationshipName>
    <type>Lookup</type>
</CustomField>