force-app/main/default/objects/ssot__LocationProductInventoryChange__dlm/fields/ssot__ReservedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReservedQuantity__c</fullName>
    <label>Reserved Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReservedQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>