force-app/main/default/objects/ssot__LocationProductInventoryChange__dlm/fields/ssot__SKUNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__SKUNumber__c</fullName>
    <label>Stock Keeping Unit</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SKUNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>